@@ -630,6 +630,7 @@
     <classes>
       <class name="test.hook.HookableTest"/>
       <class name="test.hook.issue2251.IssueTest"/>
+      <class name="test.hook.issue2257.IssueTest"/>
     </classes>
   </test>
 
